--- a/1_bimestre/ia/clase_1/ejercicios/ejercicios_practicos_no_entregables/4 - Ejercicios Pandas - Homeless.ipynb
+++ b/1_bimestre/ia/clase_1/ejercicios/ejercicios_practicos_no_entregables/4 - Ejercicios Pandas - Homeless.ipynb
@@ -31,13 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e6edd0d2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:31:07.667241Z",
+     "start_time": "2025-08-26T17:31:03.722076Z"
+    }
+   },
+   "source": "import pandas as pd",
    "outputs": [],
-   "source": [
-    "import pandas as ___"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -49,13 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c82e2b89",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:32:39.008509Z",
+     "start_time": "2025-08-26T17:32:38.981654Z"
+    }
+   },
+   "source": "homeless = pd.read_csv(\"./datasets/homeless2021.csv\")",
    "outputs": [],
-   "source": [
-    "___ = pd.____(\"./homeless2021.csv\")"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -67,13 +73,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "cf811d87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "homeless.head(___)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:33:06.154199Z",
+     "start_time": "2025-08-26T17:33:06.135439Z"
+    }
+   },
+   "source": "homeless.head()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "               region       state state code  individuals  individuals male  \\\n",
+       "0             Pacific      Alaska         AK         1295               981   \n",
+       "1  East South Central     Alabama         AL         1165               782   \n",
+       "2  West South Central    Arkansas         AR         1204               800   \n",
+       "3            Mountain     Arizona         AZ         3304              2234   \n",
+       "4             Pacific  California         CA        32910             21041   \n",
+       "\n",
+       "   individuals female  family_members  family_members male  \\\n",
+       "0                 310             502                  190   \n",
+       "1                 377             461                  172   \n",
+       "2                 403             266                   98   \n",
+       "3                1046            2156                  840   \n",
+       "4               11434           18519                 7495   \n",
+       "\n",
+       "   family_members female  pop_state  \n",
+       "0                    312     735707  \n",
+       "1                    289    5048733  \n",
+       "2                    168    3021085  \n",
+       "3                   1313    7227450  \n",
+       "4                  11009   39766650  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state code</th>\n",
+       "      <th>individuals</th>\n",
+       "      <th>individuals male</th>\n",
+       "      <th>individuals female</th>\n",
+       "      <th>family_members</th>\n",
+       "      <th>family_members male</th>\n",
+       "      <th>family_members female</th>\n",
+       "      <th>pop_state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>1295</td>\n",
+       "      <td>981</td>\n",
+       "      <td>310</td>\n",
+       "      <td>502</td>\n",
+       "      <td>190</td>\n",
+       "      <td>312</td>\n",
+       "      <td>735707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>East South Central</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>782</td>\n",
+       "      <td>377</td>\n",
+       "      <td>461</td>\n",
+       "      <td>172</td>\n",
+       "      <td>289</td>\n",
+       "      <td>5048733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>West South Central</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>800</td>\n",
+       "      <td>403</td>\n",
+       "      <td>266</td>\n",
+       "      <td>98</td>\n",
+       "      <td>168</td>\n",
+       "      <td>3021085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mountain</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>3304</td>\n",
+       "      <td>2234</td>\n",
+       "      <td>1046</td>\n",
+       "      <td>2156</td>\n",
+       "      <td>840</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>7227450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>California</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>32910</td>\n",
+       "      <td>21041</td>\n",
+       "      <td>11434</td>\n",
+       "      <td>18519</td>\n",
+       "      <td>7495</td>\n",
+       "      <td>11009</td>\n",
+       "      <td>39766650</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -85,11 +225,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "58350550",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:35:46.230821Z",
+     "start_time": "2025-08-26T17:35:46.222588Z"
+    }
+   },
+   "source": [
+    "print(homeless.dtypes)\n",
+    "print(homeless.isnull().sum())\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region                   object\n",
+      "state                    object\n",
+      "state code               object\n",
+      "individuals               int64\n",
+      "individuals male          int64\n",
+      "individuals female        int64\n",
+      "family_members            int64\n",
+      "family_members male       int64\n",
+      "family_members female     int64\n",
+      "pop_state                 int64\n",
+      "dtype: object\n",
+      "region                   0\n",
+      "state                    0\n",
+      "state code               0\n",
+      "individuals              0\n",
+      "individuals male         0\n",
+      "individuals female       0\n",
+      "family_members           0\n",
+      "family_members male      0\n",
+      "family_members female    0\n",
+      "pop_state                0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
