--- a/1_bimestre/ia/clase_1/ejercicios/ejercicios_practicos_no_entregables/1 - Ejercicios Python.ipynb
+++ b/1_bimestre/ia/clase_1/ejercicios/ejercicios_practicos_no_entregables/1 - Ejercicios Python.ipynb
@@ -173,10 +173,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T16:50:30.257598Z",
+     "start_time": "2025-08-26T16:50:30.251528Z"
+    }
+   },
+   "source": [
+    "pi_string = \"3.1415926\"\n",
+    "pi_float = float(pi_string)\n",
+    "\n",
+    "print(round(pi_float, 3))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.142\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -189,10 +207,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T16:52:07.936223Z",
+     "start_time": "2025-08-26T16:52:07.929005Z"
+    }
+   },
+   "source": [
+    "string_variable = \"Me gusta la comida mexicana\"\n",
+    "mexican_food = True\n",
+    "\n",
+    "if mexican_food:\n",
+    "    print(string_variable)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Me gusta la comida mexicana\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -203,10 +240,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T16:52:41.211871Z",
+     "start_time": "2025-08-26T16:52:41.204464Z"
+    }
+   },
+   "source": [
+    "import datetime\n",
+    "\n",
+    "print(datetime.datetime.now())"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-08-26 13:52:41.206806\n"
+     ]
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -217,10 +271,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T16:53:45.538487Z",
+     "start_time": "2025-08-26T16:53:45.529989Z"
+    }
+   },
+   "source": [
+    "import calendar\n",
+    "\n",
+    "print(calendar.month(2023, 3))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     March 2023\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "       1  2  3  4  5\n",
+      " 6  7  8  9 10 11 12\n",
+      "13 14 15 16 17 18 19\n",
+      "20 21 22 23 24 25 26\n",
+      "27 28 29 30 31\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -236,10 +314,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T16:58:47.201883Z",
+     "start_time": "2025-08-26T16:58:47.195588Z"
+    }
+   },
+   "source": [
+    "dinero_inicial = 100\n",
+    "primer_periodo = 7\n",
+    "segundo_periodo = 23\n",
+    "\n",
+    "for i in range(1, primer_periodo):\n",
+    "    dinero_inicial = dinero_inicial * 1.1\n",
+    "print(dinero_inicial)\n",
+    "\n",
+    "dinero_inicial = 100\n",
+    "\n",
+    "for i in range(1, segundo_periodo):\n",
+    "    dinero_inicial = dinero_inicial * 1.1\n",
+    "print(dinero_inicial)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "177.15610000000012\n",
+      "814.027493868399\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -250,10 +356,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:01:55.286669Z",
+     "start_time": "2025-08-26T17:01:55.280481Z"
+    }
+   },
+   "source": [
+    "def calculate_investment(dinero_inicial, interest, periodo):\n",
+    "    interest = (interest / 100) + 1\n",
+    "    for i in range(1, periodo):\n",
+    "        dinero_inicial = dinero_inicial * interest\n",
+    "    \n",
+    "    return dinero_inicial\n",
+    "\n",
+    "print(calculate_investment(100, 10, 23))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "814.027493868399\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -264,10 +392,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:07:22.458107Z",
+     "start_time": "2025-08-26T17:07:22.452375Z"
+    }
+   },
+   "source": [
+    "def check_number(num):\n",
+    "    return 100 < num < 2000\n",
+    "\n",
+    "print(check_number(150))\n",
+    "print(check_number(10))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -281,7 +429,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def es_capicua(num):\n",
+    "    num_str = str(num)\n",
+    "    return num_str == num_str[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,10 +446,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-26T17:27:48.838256Z",
+     "start_time": "2025-08-26T17:27:48.831455Z"
+    }
+   },
+   "source": [
+    "def ocultar_string(s):\n",
+    "    return \"*\" * (len(s) - 5) + s[-5:]\n",
+    "\n",
+    "def ocultar_string_con_x_visibles(s, visibles=5):\n",
+    "    if len(s) <= visibles:\n",
+    "        return s\n",
+    "    return \"*\" * (len(s) - visibles) + s[-visibles:]\n",
+    "\n",
+    "print(ocultar_string(\"1234567890\"))\n",
+    "print(ocultar_string(\"hola\"))\n",
+    "print(ocultar_string_con_x_visibles(\"1234567890\"))\n",
+    "print(ocultar_string_con_x_visibles(\"1234567890\", 3))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****67890\n",
+      "hola\n",
+      "*****67890\n",
+      "*******890\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
